--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "illuminate/support": ">=5.8.*",
+        "illuminate/support": ">=5.8",
         "php" : ">=5.3.0"
     },
     "autoload": {
